package Model;

import javafx.scene.layout.Pane;

public interface ChristmasTree {
    void draw(Pane var1);
































































}
