@startuml

title __MODEL's Class Diagram__\n


    namespace odel {
      interface Model.ChristmasTree {
          {abstract} + draw()
      }
    }

  


    namespace odel {
      class Model.Girland {
          + Girland()
          + draw()
          + drawGirland()
      }
    }



    namespace odel {
      class Model.GreenTree {
          + GreenTree()
          + draw()
      }
    }

  


    namespace odel {
      class Model.Presents {
          + Presents()
          + draw()
          + drawPresents()
      }
    }

  


    namespace odel {
      class Model.Star {
          + Star()
          + draw()
          + drawStar()
      }
    }

  


    namespace odel {
      class Model.TreeDecorator {
          + TreeDecorator()
          + draw()
      }
    }

  

  Model.Girland -up-|> Model.TreeDecorator
  Model.GreenTree .up.|> Model.ChristmasTree
  Model.Presents -up-|> Model.TreeDecorator
  Model.Star -up-|> Model.TreeDecorator
  Model.TreeDecorator .up.|> Model.ChristmasTree
  Model.TreeDecorator o-- Model.ChristmasTree : tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
